# cget-examples

./: recipes.txt
example1/libmd5/: CMakeLists.txt
example1/libmd5/include/: md5.hpp
example1/libmd5/test/: test.cpp
example2/libmd5/: CMakeLists.txt  dependencies.cmake
example2/md5app/: md5.cpp
example3/libmd5/: CMakeLists.txt  dependencies.cmake
example3/libmd5/src/: md5.cpp
example3/libmd5/test/: CMakeLists.txt
example3/md5app/: CMakeLists.txt  requirements.txt
